# sagemaker-mlops-toolkit

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: test.yml
smtoolkit/: object_factory.py
smtoolkit/draft/: cli.py
smtoolkit/draft/core/: abstract.py  builder.py  factory.py  singleton.py
smtoolkit/draft/workflows/: inference.py  training.py
smtoolkit/sklearn/: __init__.py  processing.py
smtoolkit/xgboost/: processing.py
tests/: conftest.py
tests/unit/: test_object_factory.py  test_processing.py
