[tool.poetry]
name = "sagemaker-mlops-toolkit"
version = "0.1.0.dev1"
description = "A short description of the package."
license = "MIT"
authors = ["Ernane Sena <ernane.sena@gmail.com>"]
readme = "README.md"
packages = [{include = "smtoolkit"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
sagemaker = "2.127.0"
pre-commit = "^2.20.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-vvv --cov=smtoolkit/ --cov-report=term-missing --cov-report=xml -p no:warnings"
testpaths = ["tests"]


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.3"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
